avoid overlap section with banner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ footer {
     }
   }
   section {
-    margin-top: 5px;
+    margin-top: 50px;
   }
 
   header ul {
